# haskell-src-query

./: .gitignore  .gitmodules  README.md  haskell-src-query.cabal  project.config
elisp/: hsq-cabal.el  hsq-spellcheck.el  shm-context-menu.el  shm-context-menu.el~  shm-customizations.el  shm-lambda.el  shm-node.el  shm-query.el  shm-refactor.el  shm.el
src/: Cabal.hs  Client.hs  HDevTools.hs  HLint.hs  HSrcQuery.hs  Lambda.hs  ParseAST.hs  SourceQuery.hs  SpellCheck.hs
test/: CabalSpec.hs
test/Data/: Cabal.hs
