name:                haskell-src-query
version:             1.0.0
synopsis:            Useful queries and source transformation suggestions (via hlint) for Haskell
description:         Useful queries and source transformation suggestions (via hlint) for Haskell
license:             BSD3
license-file:        LICENSE
author:              Eric Jones
maintainer:          ecjones2040@gmail.com
copyright:           Eric Jones 2014
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable haskell-src-query
  main-is:           HSrcQuery.hs
  ghc-options:       -O2 -Wall
  hs-source-dirs:    src
  build-depends:     aeson                >= 0.7.0.2,
                     bytestring           >= 0.10.0.2,
                     Cabal                >= 1.18.0,
                     hlint                >= 1.8.57,
                     process              >= 1.1.0.2,
                     base                 >= 4 && < 5,
                     haskell-src-exts     >= 1.14.0,
                     optparse-applicative >= 0.7.0.2,
                     syb                  >= 0.4.1,
                     inflections          == 0.1.*,
                     haspell              == 1.1.*

test-suite spec
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  ghc-options:       -Wall
  hs-source-dirs:    src, test
  build-depends:     base  >= 4 && < 5,
                     Cabal >= 1.18.0,    
                     hspec >= 1.8.1,
                     mtl   >= 2.1.2
